--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
+    "react-parallax-tilt": "^1.7.228",
     "react-router-dom": "^6.21.1",
     "react-syntax-highlighter": "^15.5.0"
   },
